--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,5 +8,21 @@
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 55px;
+  height: 50px;
+}
+
+.navbar-brand {
+  display: flex;
+  gap: 3%;
+  justify-content: center;
+}
+
+.navbar-brand h1 {
+  font-size: 2rem;
+  margin-top: .5rem;
+}
+
+.navbar-brand b {
+  color: #6C63FF;
 }
