--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,15 @@
-// Specific CSS for your home-page
+.info-img img {
+  height: 50px;
+  background-color: aqua;
+}
+
+.container-main {
+  display: flex;
+  justify-content: space-evenly;
+  margin: 4rem;
+  gap: 4%;
+}
+.user-container {
+  display: grid;
+  background-color: red;
+}
