--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,7 +1,10 @@
-<div class="main-container">
-  <% @chatrooms.each do |c| %>
-    <%= link_to c.name, chatroom_path(c) %>
-  <% end %>
+<div class="container-idx">
+  <div class="user-container">
+    <% @chatrooms.each do |c| %>
+      <%= link_to c.name, chatroom_path(c) %>
+    <% end %>
+  </div>
+  <div class="info-img">
+    <%= cl_image_tag("undraw_social_interaction_re_dyjh_xxlrgr", crop: :fill) %>
+</div> 
 </div>
-
-  
