--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
           maiores obcaecati odit culpa labore porro unde aliquid cumque deserunt officia aperiam quia nobis.</p>
       </div>
     </div>
-    <div class="info-modal">
-        <%= cl_image_tag("undraw_everywhere_together_re_xe5a_t4kdjc", crop: :fill) %>
+    <div class="info-img">
+        <%= image_tag("home.svg", crop: :fill) %>
     </div>    
   </div>
 <% end %>
