--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,3 +39,12 @@ body {
 a {
   text-decoration: none;
 }
+
+.message-form strong {
+  color: #6C63FF;
+  font-size: 1rem;
+}
+
+.message-form i {
+  font-size: .7rem;
+}
