--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,10 +1,21 @@
-footer {
-  padding: var(--section-padding) 0 1rem;
+.footer-field {
+  display: grid;
+  place-items: center;
 }
 
-footer .text {
-  order: 3;
-  flex-basis: 100%;
-  text-align: center;
-  margin-top: 1rem;
+.info-right {
+  color: var(--text-color);
+}
+
+.social-link {
+  margin-bottom: 1rem;
+}
+
+.social-link a {
+  background-color: var(--bg-color-1);
+  color: var(--text-color);
+}
+
+.social-link a:hover {
+  color: var(--main-color-1);
 }
