--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,24 +1,15 @@
-  <footer>
-    <div class="container">
-      <a href="#" class="logo">Portf<span>olio</span></span></a>
-      <p class="text">&copy; Copyright 2022. All rights reserved</p>
-      <ul  class="social-media">
-        <li>
-          <a href="https://github.com/bussularf" class="social-link">
-            <i class="uil uil-github"></i>
-          </a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/fernanda-de-jesus-198450a7/" class="social-link">
-            <i class="uil uil-linkedin"></i>
-          </a>
-        </li>
-        <li>
-          <a href="#" class="social-link">
-            <i class="uil uil-twitter"></i>
-          </a>
-        </li>
-      </ul>
-      
+<footer class="footer fixed-bottom">
+  <div class="footer-field">
+    <div class="heading">
+      <h3>To<b>Talk</b></h3>
     </div>
-  </footer>
+    <div class="info-right">
+      <p class="text">&copy; Copyright 2022. All rights reserved</p>
+    </div>
+    <div class="social-link">
+      <a href="#"><i class="fab fa-youtube"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a> 
+      <a href="#"><i class="fab fa-facebook"></i></a>
+    </div>
+  </div>
+</footer>
