--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,3 +4,20 @@
   margin: 0 4rem;
   gap: 4%;
 }
+
+.info-img{
+  padding: 30px;
+  width: 50%;
+  height: 60vh;
+  background-image: linear-gradient( 
+    124deg, 
+    var(--main-color-2) 53%, 
+    var(--main-color-1) -50%);
+  border-radius: 0  0 80px 80px;
+}
+
+.info-img img {
+  width: 100%;
+  min-height: calc(80% + 100px);
+  border-radius: 0  0 80px 80px;
+}
