--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,12 +2,16 @@
   <% controller.redirect_to chatrooms_path%>
 <% else %>
   <div class="container-main">
-    <div class="heading">
-      <h3>Contant in real time</h3>
-      <h1>To<b>Talk</b></h1>
-      <div class="sub-heading">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste adipisci magni aut sunt repellat maxime, 
-          maiores obcaecati odit culpa labore porro unde aliquid cumque deserunt officia aperiam quia nobis.</p>
+    <div class="content-home">
+      <div class="heading">
+        <h3>Contant in real time</h3>
+        <br>
+        <h1>To<b>Talk</b></h1>
+        <br>
+        <div class="sub-heading">
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste adipisci magni aut sunt repellat maxime, 
+            maiores obcaecati odit culpa labore porro unde aliquid cumque deserunt officia aperiam quia nobis.</p>
+        </div>
       </div>
     </div>
     <div class="info-img">
