--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -9,7 +9,8 @@
       </div>
     <% end %>
   </div>
-  <div class="info-img">
+  <div class="info-img-idx">
     <%= image_tag("capa.svg") %>
-</div> 
+  </div> 
 </div>
+<%= render 'shared/footer' %>
